# NOSF

./: .gitignore  AGENTS.md  AI.md  BEHAVIOR.md  BUILD_FLASH.md  CONTEXT.md  GEMINI.md  HARDWARE.md  KLIPPER.md  LICENSE  MANUAL.md  MOTOR_PARAMS.md  PLAN_SG_TUNER.md  README.md  STALLGUARD.md  STALLGUARD_TUNING.md  SYNC_REFACTOR_PHASE_2_11.md  SYNC_REFACTOR_PHASE_2_6.md  SYNC_REFACTOR_PHASE_2_8.md  SYNC_REFACTOR_PHASE_2_9.md  SYNC_REFACTOR_PLAN.md  TASK.md  TEST_CASES.md  WORKFLOW.md  config.ini.example
.claude/: settings.json  statusline.sh
.claude/skills/flash-ready/: SKILL.md
.claude/skills/new-cmd/: SKILL.md
.gemini/: settings.json
.gemini/scripts/: detailed_quota.py
firmware/: CMakeLists.txt  CMakePresets.json
firmware/cmake/: pico_arm_cortex_m0plus_clang_atfe.cmake  picolibc_compat.h
firmware/cmake/include_patches/hardware/: sync.h
firmware/include/: buf_signal.h  button.h  config.h  controller_shared.h  cutter.h  motion.h  protocol.h  settings_store.h  sync.h  tmc2209.h  toolchange.h
firmware/src/: button.c  cutter.c  main.c  motion.c  neopixel.c  protocol.c  settings_store.c  sync.c  tmc2209.c  tmc_uart.pio  toolchange.c
openspec/: README.md  config.yaml
openspec/changes/: README.md
openspec/changes/cutter-config-parity/: proposal.md
openspec/changes/manual-cutter-trigger/: proposal.md
openspec/design/: README.md
openspec/design/adr/: README.md
openspec/design/sync-refactor/: README.md  SYNC_REFACTOR_PHASE_2_10.md  SYNC_REFACTOR_PHASE_2_12.md  SYNC_REFACTOR_PHASE_2_13.md  SYNC_REFACTOR_PHASE_2_14.md  SYNC_REFACTOR_PHASE_2_9.md  spec-traceability.md  tasks.md
openspec/design/task-history/: README.md  sync-refactor-task-history.md
openspec/design/validation/: README.md
openspec/specs/acceptance-gate-parity/: spec.md
openspec/specs/acceptance-gate-semantics/: spec.md
openspec/specs/analyzer-rigor/: spec.md
openspec/specs/bucket-locking/: spec.md
openspec/specs/calibration-workflow/: spec.md
openspec/specs/klipper-integration/: spec.md
openspec/specs/klipper-motion-tracking/: spec.md
openspec/specs/live-tuner/: spec.md
openspec/specs/motion-safety/: spec.md
openspec/specs/persistence-contract/: spec.md
openspec/specs/project-architecture/: spec.md
openspec/specs/sync-refactor/: spec.md
openspec/specs/sync-refactor-foundation/: spec.md
openspec/specs/task-workflow/: spec.md
openspec/specs/toolchange-orchestration/: spec.md
scripts/: flash_nightowl.sh  flash_nosf.sh  gcode_marker.py  gen_config.py  gen_motor_config.py  klipper_motion_tracker.py  klipper_tune.py  motors.ini  nightowl_cmd.py  nosf_analyze.py  nosf_cmd.py  nosf_live_tuner.py  nosf_logger.py  nosf_marker.py  nosf_test.py  serial_utils.py  sg_monitor.py  sg_tuner.py  test_gcode_marker.py  test_klipper_motion_tracker.py  test_nosf_analyze.py  test_nosf_live_tuner.py  test_phase_2_10_parity.py  tmc_chopconf.py  tune_config.ini  tune_iss_sg.py  tune_reload_sg.py  tune_stallguard.py  validate_regression.sh
tests/fixtures/: orca_sample.gcode  phase_2_11_chatter.json  phase_2_12_field_csv.csv  phase_2_12_field_state.json  phase_2_13_run_a.csv  phase_2_13_run_b.csv  phase_2_13_run_c.csv  phase_2_13_three_run_state.json  phase_2_14_diluted_state.json  phase_2_14_high_sigma_run_a.csv  phase_2_14_high_sigma_run_b.csv
